Add CI workflow, bin/krit wrapper, and krit.yml classpath config (#4)
* ci: add CI workflow with build verification and self-analysis

* add bin/krit wrapper script; use it in CI and README

* improve CLI help text and show it on empty invocation

* bin/krit: auto-discover Java 25+; fix README Java requirement

* feat: add classpath/classpath-file support to krit.yml

krit.yml now accepts a `classpath` list of paths or a `classpath-file`
pointing to a colon/newline-separated classpath file. The shadowJar task
also writes build/compile-classpath.txt so krit can analyze itself with
no --classpath flag needed.

Config classpath is merged with any --classpath passed on the CLI.

* ci: drop explicit --classpath; config/krit.yml provides it via classpath-file